// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Dynamic Block component with custom classes 1`] = `
<div
  className="test-class"
  style={
    Object {
      "border": "solid",
      "borderColor": "red",
      "borderRadius": "15px",
      "borderWidth": "10px",
      "marginBottom": "10px",
      "marginLeft": "10px",
      "marginRight": "10px",
      "marginTop": "10px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
      "textAlign": "right",
    }
  }
>
  <mock-CmsDynamicBlockGroup
    displayMode="fixed"
    uids="uids"
  />
</div>
`;

exports[`renders a Dynamic Block component without custom classes 1`] = `
<div
  className=""
  style={
    Object {
      "border": "solid",
      "borderColor": "red",
      "borderRadius": "15px",
      "borderWidth": "10px",
      "marginBottom": "10px",
      "marginLeft": "10px",
      "marginRight": "10px",
      "marginTop": "10px",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
      "textAlign": "right",
    }
  }
>
  <mock-CmsDynamicBlockGroup
    displayMode="fixed"
    uids="uids"
  />
</div>
`;
